week13/code
ben@ubuntu:~/Desktop$ cd ..
ben@ubuntu:~$ mkdir week13
ben@ubuntu:~$ cd week13
ben@ubuntu:~/week13$ cp ../week11/ch11.h ./ch13.h
ben@ubuntu:~/week13$ ls
ch13.h
ben@ubuntu:~/week13$ vi 13-1.c
ben@ubuntu:~/week13$ vi ch13.h
ben@ubuntu:~/week13$ gcc -g 13-1.c -o 13-1
13-1.c: In function ‘write_data’:
13-1.c:11:41: error: expected ‘;’ before ‘)’ token
   err_exit("Output to stream failed.\n"));
                                         ^
13-1.c:11:41: error: expected statement before ‘)’ token
ben@ubuntu:~/week13$ vi 13-1.c
ben@ubuntu:~/week13$ gcc -g 13-1.c -o 13-1
ben@ubuntu:~/week13$ ./13-1
line  0
line  1
line  2
line  3
line  4
line  5
line  6
line  7
line  8
line  9
line 10
line 11
line 12
line 13
line 14
line 15
line 16
line 17
line 18
line 19
line 20
--More--

ben@ubuntu:~/week13$ vi 13-1.c
ben@ubuntu:~/week13$ gcc -g 13-1.c -o 13-1
ben@ubuntu:~/week13$ ./13-1
line  0
line  1
line  2
line  3
line  4
line  5
line  6
line  7
line  8
line  9
line 10
line 11
line 12
line 13
line 14
line 15
line 16
line 17
line 18
line 19
line 20
line 21
line 22
line 23
line 24
line 25
line 26
line 27
line 28
line 29
line 30
line 31
line 32
line 33
line 34
line 35
line 36
line 37
line 38
line 39
line 40
line 41
line 42
line 43
line 44
line 45
line 46
line 47
line 48
line 49
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ mknod myfifo p
ben@ubuntu:~/week13$ ls -l
total 20
-rwxrwxr-x 1 ben ben 11728 Dec 14 09:56 13-1
-rw-rw-r-- 1 ben ben   363 Dec 14 09:52 13-1.c
-rw-rw-r-- 1 ben ben  2029 Dec 14 09:52 ch13.h
prw-rw-r-- 1 ben ben     0 Dec 14 10:38 myfifo
ben@ubuntu:~/week13$ cat <myfifo

hello world
ben@ubuntu:~/week13$ 
ben@ubuntu:~/week13$ vi ch13.h
ben@ubuntu:~/week13$ vi 13-2.c
ben@ubuntu:~/week13$ gcc -g 13-2.c -o 13-2
ben@ubuntu:~/week13$ ./13-2
ds
da
^C
ben@ubuntu:~/week13$ cat FIFO_FILE
cat: FIFO_FILE: No such file or directory
ben@ubuntu:~/week13$ ls
13-1  13-1.c  13-2  13-2.c  ch13.h  myfifo  testfifo
ben@ubuntu:~/week13$ cat testfifo
hello world
ben@ubuntu:~/week13$ ./13-2
process 2486 opened: ./testfifo
2486 received 12 bytes
process 2486 received total 12 bytes
ben@ubuntu:~/week13$ ls -l
total 36
-rwxrwxr-x 1 ben ben 11728 Dec 14 09:56 13-1
-rw-rw-r-- 1 ben ben   363 Dec 14 09:52 13-1.c
-rwxrwxr-x 1 ben ben 11768 Dec 14 10:57 13-2
-rw-rw-r-- 1 ben ben   629 Dec 14 10:57 13-2.c
-rw-rw-r-- 1 ben ben  2102 Dec 14 10:48 ch13.h
prw-rw-r-- 1 ben ben     0 Dec 14 10:40 myfifo
prw-rw-r-- 1 ben ben     0 Dec 14 11:01 testfifo
ben@ubuntu:~/week13$ ^C
ben@ubuntu:~/week13$ 


ben@ubuntu:~/Desktop$ echo "hello world"
hello world
ben@ubuntu:~/Desktop$ echo "hello world">myfifo
ben@ubuntu:~/Desktop$ cd ..
ben@ubuntu:~$ echo "hello world">week13/myfifo
ben@ubuntu:~$ echo "hello world">week13/myfifo
^[[A^C
ben@ubuntu:~$ echo "hello world">week13/testfifo
ben@ubuntu:~$ echo "hello world">./week13/testfifo
ben@ubuntu:~$ 


ben@ubuntu:~/week13$ cat 13-1.c 13-2.c ch13.h
#include"ch13.h"
void write_data(FILE * stream)
{
	int i;
	for(i=0;i<50;i++)
	{
		fprintf(stream,"line %2d\n",i);
	}
	if(ferror(stream))
	{
		err_exit("Output to stream failed.\n");
	}
}
int main(void)
{
	FILE *output;
	output=popen("more -10","w");
	if(!output)
		err_exit("Could not run more.\n");
	write_data(output);
	pclose(output);
	return EXIT_SUCCESS;
}

#include"ch13.h"
int main(void)
{
	int fifo_fd,n,total_bytes=0;
	char readbuf[PIPE_BUF];
	if(access(FIFO_FILE,F_OK)==-1)
		if(mkfifo(FIFO_FILE,0666)!=0)
		{
			printf("Could not create fifo %s\n",FIFO_FILE);
			exit(EXIT_FAILURE);
		}
	if((fifo_fd=open(FIFO_FILE,O_RDONLY))<0)
	{
		printf("Could not open fifo %s\n",FIFO_FILE);
		exit(EXIT_FAILURE);
	}
	printf("process %d opened: %s\n",getpid(),FIFO_FILE);
	while((n=read(fifo_fd,readbuf,PIPE_BUF))>0)
	{
		printf("%d received %d bytes\n",getpid(),n);
		total_bytes+=n;
	}
	close(fifo_fd);
	printf("process %d received total %d bytes\n",getpid(),total_bytes);
	return 0;
}

			
#include<stdio.h>
#include<sys/types.h>
#include<sys/stat.h>
#include<unistd.h>
#include<string.h>
#include<fcntl.h>
#include<stdlib.h>
#include<time.h>
#include<setjmp.h>
#include<wait.h>
#include<errno.h>
#include<dlfcn.h>

#define PIPE_BUF 100
#define FIFO_FILE "./testfifo"
#define TEN_MEG 1000
#define INFILE "./in.txt"
#define OUTFILE "./out.txt"
#define MODE S_IRUSR|S_IWUSR|S_IRGRP|S_IWGRP|S_IROTH
void err_exit(char *s)
{
	printf("USAGE : *s is faile!\n");
	exit(0);
}



ben@ubuntu:~/week13$ cat ch13.h 13-3.c 13-3-2.c
#include<stdio.h>
#include<sys/types.h>
#include<sys/stat.h>
#include<unistd.h>
#include<string.h>
#include<fcntl.h>
#include<stdlib.h>
#include<time.h>
#include<setjmp.h>
#include<wait.h>
#include<errno.h>
#include<dlfcn.h>

#define SERVER_FIFO_NAME "./server_fifo"
#define CLIENT_FIFO_NAME "./client_%d_fifo"
#define BUFFER_SIZE 132
#define PIPE_BUF 100
#define FIFO_FILE "./testfifo"
#define TEN_MEG 1000
#define INFILE "./in.txt"
#define OUTFILE "./out.txt"
#define MODE S_IRUSR|S_IWUSR|S_IRGRP|S_IWGRP|S_IROTH
struct data_to_pass {  
    pid_t  client_pid; 
    char  data[BUFFER_SIZE];
};
void err_exit(char *s)
{
	printf("USAGE : *s is faile!\n");
	exit(0);
}

                                                                                                                                    
 
#include "ch13.h"
int main()
{
   int server_fifo_fd, client_fifo_fd;
   struct data_to_pass my_data;
   int nbytes;
   char client_fifo_name[256], *tmp_char_ptr;
   mkfifo(SERVER_FIFO_NAME, 0777);
   server_fifo_fd = open(SERVER_FIFO_NAME, O_RDONLY);
   if (server_fifo_fd == -1) 
       err_exit("Server fifo failure!\n");
   do { 
       nbytes = read(server_fifo_fd, &my_data, sizeof(my_data));
       if (nbytes > 0) { 
           tmp_char_ptr = my_data.data;
          while (*tmp_char_ptr) {
             if (isupper(*tmp_char_ptr))
                *tmp_char_ptr = tolower(*tmp_char_ptr);
             else if  (islower(*tmp_char_ptr))
                *tmp_char_ptr = toupper(*tmp_char_ptr);
             else if (*tmp_char_ptr == '\n')
                *tmp_char_ptr = '\0';
             tmp_char_ptr++;
          }
           sprintf(client_fifo_name, CLIENT_FIFO_NAME, my_data.client_pid);
           client_fifo_fd = open(client_fifo_name, O_WRONLY);
           if (client_fifo_fd != -1) {
               write(client_fifo_fd, &my_data, sizeof(my_data));
               close(client_fifo_fd);
           }
       }
   } while (nbytes > 0);
   close(server_fifo_fd);
   unlink(SERVER_FIFO_NAME);
   return 0;  
}

#include "ch13.h"
int main()
{
   int server_fifo_fd, client_fifo_fd;
   struct data_to_pass my_request;
   char client_fifo_name[256];
   pid_t mypid;   
   server_fifo_fd = open(SERVER_FIFO_NAME, O_WRONLY);
   if (server_fifo_fd == -1) 
       err_exit("Sorry, no server");
   mypid = getpid();
   sprintf(client_fifo_name, CLIENT_FIFO_NAME, mypid);
   if (mkfifo(client_fifo_name, 0777) == -1)
       err_exit(client_fifo_name);
   while (1) {
       printf ("Enter your request:");
       memset(my_request.data,0,BUFFER_SIZE);
       fgets (my_request.data, BUFFER_SIZE, stdin);
       if (strcmp(my_request.data,"bye\n")==0
                      ||strcmp(my_request.data, "BYE\n")==0)
           break;
       my_request.client_pid = mypid;
       write(server_fifo_fd, &my_request, sizeof(my_request));
       client_fifo_fd = open (client_fifo_name, O_RDONLY);
       if (client_fifo_fd != -1) {
           if (read (client_fifo_fd, &my_request, sizeof(my_request)) > 0) {
               printf ("---I get answer: %s\n", my_request.data);
           }
           close(client_fifo_fd); 
       }
    }  
    close(server_fifo_fd);
    unlink(CLIENT_FIFO_NAME);
    exit(EXIT_SUCCESS);
}

ben@ubuntu:~/week13$ ./13-3-2
Enter your request:dsa
---I get answer: DSA
Enter your request:fsdSS
---I get answer: FSDss
Enter your request:fbye
---I get answer: FBYE
Enter your request:bye
ben@ubuntu:~/week13$ ./13-3-2
Enter your request:12xz
---I get answer: 12XZ
Enter your request:fsafDSD
---I get answer: FSAFdsd
Enter your request:faf
---I get answer: FAF
Enter your request:BYE
ben@ubuntu:~/week13$ 


